# rag-debugger

./: README.md  cli_results.json  dataset.json  pyproject.toml  requirements.txt  results.json
examples/: demo.py
rag_debugger/: __init__.py  cli.py  coverage.py  debugger.py  embeddings.py  faithfulness.py  hallucination.py  report.py  scoring.py  similarity.py
rag_debugger.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
